# ferromix2

./: .mcp.json  Cargo.toml  LICENSE  README.md  RUN_FERROMIX2.md  RUN_ICED.md  dump_code.sh  ferromix_dump.txt  mixsnap.sh  mixtest.sh  phone_echo.sh  reset_audio.sh  trace_mixminus.sh  trace_strip.sh
assets/: ferromix.desktop  ferromix2.desktop
crates/mixer-core/: Cargo.toml
crates/mixer-core/examples/: test_client.rs
crates/mixer-core/src/: backend.rs  config.rs  engine.rs  ipc.rs  lib.rs  mock.rs  model.rs
crates/mixer-daemon/: Cargo.toml
crates/mixer-daemon/src/: ipc.rs  main.rs
crates/mixer-gui/: Cargo.toml
crates/mixer-gui-iced/: Cargo.toml
crates/mixer-gui-iced/src/: icons.rs  link.rs  main.rs  theme.rs  tokens.rs  widgets.rs
crates/mixer-gui/src/: app.rs  controller.rs  main.rs  theme.rs
crates/mixer-gui/src/ui/: bus.rs  fader.rs  matrix.rs  meters.rs  mod.rs  settings.rs  strip.rs
crates/mixer-pw/: Cargo.toml
crates/mixer-pw/src/: dsp.rs  lib.rs  links.rs  recorder.rs  registry.rs  tap.rs  virtual_dev.rs  worker.rs
docs/: ARCHITECTURE.md
packaging/: PKGBUILD  ferromix.service  ferromix2.service  ferromix2.spec
packaging/wireplumber/: 91-ferromix-disable-role-loopbacks.conf
