[workspace]
resolver = "2"
members = [
    "crates/mixer-core",
    "crates/mixer-pw",
    "crates/mixer-daemon",
    "crates/mixer-gui",
    "crates/mixer-gui-iced",
]

[workspace.package]
version = "2.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourname/ferromix"
authors = ["FerroMix contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
toml = "0.8"
dirs = "5"
log = "0.4"
env_logger = "0.11"
hound = "3.5"

[profile.release]
lto = "thin"
opt-level = 3
strip = true
