[package]
name = "mixer-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Platform-agnostic mixer engine: model, rules, config, IPC protocol"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
