[package]
name = "mixer-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "FerroMix GUI (egui): mixer console, routing matrix, status ticker"

[[bin]]
name = "ferromix-gui"
path = "src/main.rs"

[dependencies]
mixer-core = { path = "../mixer-core" }
# Enable BOTH glutin backends. eframe/glutin otherwise may build without a
# working GL backend for the current compositor; on KDE Plasma 6 Wayland the
# window then fails to appear with no error. Pulling in x11 guarantees an
# XWayland fallback path, and wayland covers native sessions.
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
log = { workspace = true }
env_logger = { workspace = true }
